SSM-3419: fixed by adding a test button. created an admin interface for performing the test.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@32133 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/HttpRoutingAssertionDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/HttpRoutingAssertionDialog.properties
@@ -84,3 +84,15 @@ showPassword.label=&Show Password
 showKrbPasswordCheckBox.label=&Show Password
 showProxyPasswordCheckBox.label=&Show Password
 response.byteLimit.text=Response message limit:
+
+testButton.text=Test
+dialog.test.title=HTTP Assertion URL Test
+dialog.test.progress=Testing connection to URL ...
+dialog.test.message=Test Message to send
+dialog.test.message.required=Test Message is required
+dialog.test.result.gateway.success=The Gateway has verified the connection to the URL
+dialog.test.result.gateway.failure=Unexpected Gateway reply while trying to test the URL
+dialog.test.result.success=URL Connection Success
+dialog.test.result.failure=URL Connection Failure
+dialog.test.detail.log=Detailed log of test session:
+
