SSG-5830: adding a shell script to return a log for viewing in SSM to work around permission issues.  fix the LogViewer's validation, it was checking for null @ the wrong location.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@32174 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/build.xml
+++ b/build.xml
@@ -3086,6 +3086,7 @@
                         <include name="patch_launcher"/>
                         <include name="patchcli_launch"/>
                         <include name="viewlog"/>
+                        <include name="ssg-viewlog.sh"/>
                     </fileset>
                     <fileset dir="${src.root}/etc/appliance/crypto">
                         <include name="ncipherconfig.pl"/>
