--- a/modules/gateway/production/ivy.xml
+++ b/modules/gateway/production/ivy.xml
@@ -71,6 +71,7 @@
         <dependency name="EvaluateJsonPathExpressionAssertion" rev="latest.integration" conf="module"/>
         <dependency name="LookupDynamicContextVariablesAssertion" rev="latest.integration" conf="module"/>
         <dependency name="NtlmAuthenticationAssertion" rev="latest.integration" conf="module"/>
+        <dependency name="KerberosAuthenticationAssertion" rev="latest.integration" conf="module"/>
         <!-- Optional Modular Assertions are copied to "dist" but not packaged -->
         <dependency name="CaWsdmAssertion" rev="latest.integration" conf="module-optional"/>
     </dependencies>
