SSM-3990: fix minor gui issues, add semi-colon to label and use "Daily" and "Hourly" as drop down values as opposed to being in uppercase.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@32229 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/SinkConfigurationPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/SinkConfigurationPropertiesDialog.properties
@@ -44,6 +44,8 @@ fileSettings.format.label=F&ormat:
 fileSettings.format.RAW.text=Raw
 fileSettings.format.STANDARD.text=Standard
 fileSettings.format.VERBOSE.text=Verbose
+fileSettings.rollingInterval.HOURLY.text=Hourly
+fileSettings.rollingInterval.DAILY.text=Daily
 
 # Syslog Settings strings
 syslogSettings.protocol.label=P&rotocol:
