--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1765,7 +1765,7 @@ jdbcConnection.pooling.minPoolSize.defaultValue.default=3
 jdbcConnection.pooling.minPoolSize.defaultValue.clusterProperty=jdbcConnection.pooling.minPoolSize.defaultValue
 jdbcConnection.pooling.minPoolSize.defaultValue.validation.type=integer
 
-jdbcConnection.driverClass.defaultList.description=The default list of supported database driver classes (a list of driver classes; default com.mysql.jdbc.Driver).  Each driver class is separated by a new line character.
+jdbcConnection.driverClass.defaultList.description=The default list of supported database driver classes (a list of driver classes).  Each driver class is separated by a new line character.
 jdbcConnection.driverClass.defaultList.default=com.mysql.jdbc.Driver\ncom.l7tech.jdbc.mysql.MySQLDriver\ncom.l7tech.jdbc.db2.DB2Driver\ncom.l7tech.jdbc.oracle.OracleDriver\ncom.l7tech.jdbc.sqlserver.SQLServerDriver
 jdbcConnection.driverClass.defaultList.clusterProperty=jdbcConnection.driverClass.defaultList
 
