ug FR-525: add MQ PCF library for future support of Message Properties.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@32323 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/MqNativeAssertion/ivy.xml
+++ b/modules/gateway/assertions/MqNativeAssertion/ivy.xml
@@ -14,11 +14,14 @@
 	<dependencies>
         <!-- Don't package jars with modular assertion aar (due to licensing restriction) -->
         <dependency org="com.ibm.mq" name="com.ibm.mq" rev="7.1.0.1" force="true" conf="compile"/>
+        <dependency org="com.ibm.mq" name="com.ibm.mq.headers" rev="7.1.0.1" force="true" conf="compile"/>
         <dependency org="com.ibm.mq" name="com.ibm.mq.jmqi" rev="7.1.0.1" force="true" conf="compile"/>
+        <dependency org="com.ibm.mq" name="com.ibm.mq.pcf" rev="7.1.0.1" force="true" conf="compile"/>
 
         <!-- Package MQ jars with modular assertion aar (make sure there's no licensing restriction)
         <dependency org="com.ibm.mq" name="com.ibm.mq" rev="7.1.0.1" force="true" conf="core"/>
         <dependency org="com.ibm.mq" name="com.ibm.mq.jmqi" rev="7.1.0.1" force="true" conf="core"/>
+        <dependency org="com.ibm.mq" name="com.ibm.mq.pcf" rev="7.1.0.1" force="true" conf="core"/>
 
         <dependency org="com.ibm.mq" name="com.ibm.mq.commonservices" rev="7.1.0.1" force="true" conf="runtime"/>
         <dependency org="com.ibm.mq" name="com.ibm.mq.headers" rev="7.1.0.1" force="true" conf="runtime"/>
