SSG-5862: add a radio button to the "add service parameter" dialog to specify whether the parameter is a header or a query parameter.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@32326 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/IcapAntivirusScannerAssertion/src/main/resources/com/l7tech/external/assertions/icapantivirusscanner/console/resources/IcapServerResources.properties
+++ b/modules/gateway/assertions/IcapAntivirusScannerAssertion/src/main/resources/com/l7tech/external/assertions/icapantivirusscanner/console/resources/IcapServerResources.properties
@@ -21,10 +21,13 @@ server.label.parameters=Service Parameters
 server.label.maxdepth=Max MIME Depth:
 server.button.testConnection=&Test Connection
 
-param.label.name=Parameter Name
-param.label.value=Parameter Value
+param.label.name=Parameter Name\:
+param.label.value=Parameter Value\:
 icapServerUrl=ICAP Server URL:
 varPrefix.label=Variable Prefix:
+param.label.type=Parameter Type\:
+param.type.query=Query
+param.type.header=Header
 
 
 
