--- a/modules/gateway/assertions/JDBCQueryAssertion/src/main/resources/com/l7tech/external/assertions/jdbcquery/console/resources/JdbcQueryAssertionPropertiesDialog.properties
+++ b/modules/gateway/assertions/JDBCQueryAssertion/src/main/resources/com/l7tech/external/assertions/jdbcquery/console/resources/JdbcQueryAssertionPropertiesDialog.properties
@@ -36,3 +36,5 @@ warning.message.duplicated.variable=Variable Name, {0} already exists.  Try a ne
 
 message.query.testing.passed=Query testing passed!
 message.query.testing.failed=Query testing failed:
+label.generate.xmlResult=Generate XML Result
+tooltip.generate.xmlResult=XML Result will be stored in [prefix].xmlResult context variable
